Access violation trying to access C.evaluated_get().view_layer_eval.depsgraph #62504

Closed
opened 2019-03-12 18:32:46 +01:00 by Kai Jægersen · 13 comments

view_layer_eval.gif

view_layer_eval_crash.blend

System Information
Operating system: Win 10
Graphics card: gtx1080

Blender Version
Broken: b28 March 12, 14:38:10 - 936014ea8c

Access violation when trying to access C.evaluated_depsgraph_get().view_layer_eval.depsgraph. Crash occurs when trying to list the members of view_layer_eval in an evaluated depsgraph. Looks like the member depsgraph is causing it. All member names not staring with d lists fine. When doing dir(C.evaluated_depsgraph_get().view_layer_eval) it tells me depsgraph is the only member starting with d in this namespace.

Exact steps for others to reproduce the error

  1. Open interactive console and type the below. The last line should crash.
deg = C.evaluated_depsgraph_get()
deg.view_layer_eval.depsgraph

See attached redundant gif.
I even made a blend file. Just hit ctrl+space

![view_layer_eval.gif](https://archive.blender.org/developer/F6810810/view_layer_eval.gif) [view_layer_eval_crash.blend](https://archive.blender.org/developer/F6810814/view_layer_eval_crash.blend) **System Information** Operating system: Win 10 Graphics card: gtx1080 **Blender Version** Broken: b28 March 12, 14:38:10 - 936014ea8c74 Access violation when trying to access C.evaluated_depsgraph_get().view_layer_eval.depsgraph. Crash occurs when trying to list the members of `view_layer_eval` in an evaluated depsgraph. Looks like the member `depsgraph` is causing it. All member names not staring with `d` lists fine. When doing `dir(C.evaluated_depsgraph_get().view_layer_eval)` it tells me `depsgraph` is the only member starting with `d` in this namespace. **Exact steps for others to reproduce the error** 1. Open interactive console and type the below. The last line should crash. ``` deg = C.evaluated_depsgraph_get() deg.view_layer_eval.depsgraph ``` See attached redundant gif. I even made a blend file. Just hit ctrl+space

Added subscriber: @KaiJaegersen

Added subscriber: @KaiJaegersen
Jacques Lucke changed title from Access violation trying to list C.depsgraph.view_layer_eval to Access violation trying to list C.depsgraph.view_layer_eval.depsgraph 2019-03-13 12:25:20 +01:00

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

Simply executing the following script in the text editor also shows the bug.

lang=python
import bpy
bpy.context.depsgraph.view_layer_eval.depsgraph
Simply executing the following script in the text editor also shows the bug. ``` lang=python import bpy bpy.context.depsgraph.view_layer_eval.depsgraph ```

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

bpy.context no longer has depsgraph member

If I do steps to reproduce on evaluated_depsgraph_get() I get no crash.

Can you please check if this is still an issue in latest build?
https://builder.blender.org/download/

bpy.context no longer has `depsgraph` member If I do steps to reproduce on `evaluated_depsgraph_get()` I get no crash. Can you please check if this is still an issue in latest build? https://builder.blender.org/download/

Yeah. Type in console:

deg = C.evaluated_depsgraph_get()

deg.view_layer_eval.depsgraph  <- crash on hitting Enter

I don't think there's anything useful in this particular location, just the crash accessing in itself was amusing back then.

Yeah. Type in console: ``` deg = C.evaluated_depsgraph_get() deg.view_layer_eval.depsgraph <- crash on hitting Enter ``` I don't think there's anything useful in this particular location, just the crash accessing in itself was amusing back then.
Kai Jægersen changed title from Access violation trying to list C.depsgraph.view_layer_eval.depsgraph to Access violation trying to access C.evaluated_get().view_layer_eval.depsgraph 2020-01-28 18:05:19 +01:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Ok, can confirm.

>	blender.exe!rna_ViewLayer_depsgraph_get(PointerRNA * ptr) Line 171	C

 	blender.exe!ViewLayer_depsgraph_get(PointerRNA * ptr) Line 908	C
 	blender.exe!RNA_property_pointer_get(PointerRNA * ptr, PropertyRNA * prop) Line 3757	C
 	blender.exe!pyrna_prop_to_py(PointerRNA * ptr, PropertyRNA * prop) Line 1565	C
 	blender.exe!pyrna_struct_getattro(BPy_StructRNA * self, _object * pyname) Line 4261	C
 	[Externí kód]	
 	blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8333	C
 	blender.exe!rna_operator_execute_cb(bContext * C, wmOperator * op) Line 1307	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1269	C
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1504	C
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1519	C
 	blender.exe!console_indent_or_autocomplete_exec(bContext * C, wmOperator * UNUSED_op) Line 486	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1269	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2081	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2391	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2527	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2792	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3245	C
 	blender.exe!WM_main(bContext * C) Line 421	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C

id was null

Ok, can confirm. ``` > blender.exe!rna_ViewLayer_depsgraph_get(PointerRNA * ptr) Line 171 C blender.exe!ViewLayer_depsgraph_get(PointerRNA * ptr) Line 908 C blender.exe!RNA_property_pointer_get(PointerRNA * ptr, PropertyRNA * prop) Line 3757 C blender.exe!pyrna_prop_to_py(PointerRNA * ptr, PropertyRNA * prop) Line 1565 C blender.exe!pyrna_struct_getattro(BPy_StructRNA * self, _object * pyname) Line 4261 C [Externí kód] blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8333 C blender.exe!rna_operator_execute_cb(bContext * C, wmOperator * op) Line 1307 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1269 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1504 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1519 C blender.exe!console_indent_or_autocomplete_exec(bContext * C, wmOperator * UNUSED_op) Line 486 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1269 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2081 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2391 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2527 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2792 C blender.exe!wm_event_do_handlers(bContext * C) Line 3245 C blender.exe!WM_main(bContext * C) Line 421 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ``` `id` was null
Campbell Barton self-assigned this 2020-09-12 12:23:33 +02:00

This issue was referenced by 055c0f9077

This issue was referenced by 055c0f907733a070e3ecc6484981742fa7f433dd

This issue was referenced by 9d290c9fc6

This issue was referenced by 9d290c9fc62acdbb53fb34922916521f2027ed33

This issue was referenced by ca39325826

This issue was referenced by ca393258262625a82a3389bf3ad6a8dc6cd22dff

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62504
There is no content yet.