Fix T62504: Crash accessing depsgraph from evaluated view layer

Use correct owner_id types for depsgraph view_layer properties
instead of inheriting from the Depsgraph which is set to NULL.